--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
 </head>
 <body>
 <header class="lw-layout__header">
-  <strong>Mind Your Language</strong> by Lukasz Wadowski
+  <div><strong>Mind Your Language</strong> by Lukasz Wadowski</div>
+  <a href="https://github.com/lukaszwado/mind-your-language" target="_blank">
+    <img class="lw-layout__gh-logo" src="images/github_logo.png" alt="Find this repository on Github"/>
+  </a>
   <div class="lw-layout__notification">
     There is no way back
   </div>
 </header>
 <article class="lw-layout__article">
-  <h1>It is all about the words...</h1>
+  <h1 class="lw-layout__article__header">It is all about the words...</h1>
   When you are on your own nobody cares about your vocabulary.<br>
-  But when you are in public you should <strong>mind your language</strong>!<br>
+  But when you are in public you should <strong class="lw-layout__text--distinct">mind your language</strong>!<br>
   Scroll down to see the difference.
 </article>
 <div class="lw-layout__main-container">
   <div class="lw-layout__code-container">
     <div class="lw-grid__row">
-      <code class="lw-ide flex-grid__cell" lw-app="lwEditorDefault">
+      <code class="lw-ide lw-ide--default flex-grid__cell" lw-app="lwEditorDefault">
         <div class="lw-ide__row lw-ide__row-indent-{{row.indent}}" row-number="{{$$nonZeroIndex}}"
              lw-repeat="row in lwEditorDefault">
           <span class="lw-ide__text lw-ide__text--{{element.type}}" lw-repeat="element in row">{{element.text}}</span>
@@ -43,7 +46,7 @@
     Mission accomplished, your teammates' faces: <strong>:) => :D</strong>
   </footer>
 </div>
-
+<script src="scripts/ui_helper.js"></script>
 <script src="scripts/data.js"></script>
 <script src="scripts/animation_keyframes.js"></script>
 <script src="scripts/scope.js"></script>
