--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   </footer>
 </div>
 <script src="scripts/ui_helper.js"></script>
-<script src="scripts/data.js"></script>
-<script src="scripts/animation_keyframes.js"></script>
+<script src="scripts/data/data.js"></script>
+<script src="scripts/data/animation_keyframes.js"></script>
 <script src="scripts/scope.js"></script>
 <script src="scripts/editor.js"></script>
 <script src="scripts/index.js"></script>
