--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="styles/editor.css">
   <link rel="stylesheet" href="styles/grid.css">
   <link rel="stylesheet" href="styles/layout.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 </head>
 <body>
@@ -15,10 +16,10 @@
   <a href="https://github.com/lukaszwado/mind-your-language" target="_blank">
     <img class="lw-layout__gh-logo" src="images/github_logo.png" alt="Find this repository on Github"/>
   </a>
-  <div class="lw-layout__notification">
-    There is no way back
-  </div>
 </header>
+<div class="lw-layout__notification">
+  There is no way back!
+</div>
 <article class="lw-layout__article">
   <h1 class="lw-layout__article__header">It is all about the words...</h1>
   When you are on your own nobody cares about your vocabulary.<br>
